[tool.poetry]
name = "pydevtools"
version = "1.1.2"
description = "A collection of utility modules for Python development"
authors = ["Jeel Dobariya <dobariyaj34@gmail.com>"]
license = "MIT"
homepage = "https://jeeldobariya38.github.io/PyDevTools/"
repository = "https://github.com/JeelDobariya38/PyDevTools"
documentation = "https://jeeldobariya38.github.io/PyDevTools/documentation.html"
keywords = ["packaging", "poetry"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
packages = [
    { include = "pydevtools" }
]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
coverage = "^7.4.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
